# demoedit

./: .env  .env.example  =4.8  Makefile  pyproject.toml  run.py
app/: api.py  attribution.py  llm_provider.py  observability.py  orchestrator.py  retriever.py  settings.py  synthesize.py  temporal.py
data/: chunk_ids.npy  chunk_meta.parquet  chunks.csv  docs.csv  embeddings.npy
docs/: README-lite.md  SAFETY-SCOPE.md
envs/: chronorag-lite.yaml
graph/: schema.cypher  seed.cypher
indexes/: faiss.index
ingest/: build_faiss.py  loader.py
ingest/demo_dataset/: independence.txt
tests/: test_e2e.py
tools/: ask_cli.py
ui/: app.py
